[package]
name = "libfuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["link_libfuzzer"]
link_libfuzzer = []

[dependencies]
arbitrary = "1"
once_cell = "1"
bcs = "0.1.6"
anyhow = "1.0.52"
move-vm-runtime = { path = "../../move-vm/runtime" }
move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-core-types = { path = "../../move-core/types" }
move-vm-types = { path = "../../move-vm/types" }
move-vm-test-utils = { path = "../../move-vm/test-utils" }
move-binary-format = { path = "../../move-binary-format" }
move-cli = { path = "../../tools/move-cli" }
move-package = { path = "../../tools/move-package" }
move-stdlib = { path = "../../move-stdlib"}

[workspace]